add link on the home page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -54,7 +54,7 @@
                     <li>Au bipbip bus</li>
                     <li>Tu en veux plus...</li>
                 </ul>
-                <p><a href="#" title="lien vers la page contact">Organise une collecte</a></p>
+                <p><a href="{{ path('add_message') }}" title="lien vers la page contact">Organise une collecte</a></p>
             </article>
 
             <article>
@@ -84,7 +84,7 @@
                 <img src="/images/jules-logo.png" alt=""/>
                 <img src="/images/yuka-logo.png" alt=""/>
             </article>
-            <a href="#" title="Lien vers la page partenaire" class="primary-button">Rejoindre nos partenaires</a>
+            <a href="{{ path('organisms_index') }}" title="Lien vers la page partenaire" class="primary-button">Rejoindre nos partenaires</a>
         </section>
 
         <section class="contact">
