--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,9 @@
                 <ul>
                     <li class="primary-title primary-title-menu"><a href="{{ path('home') }}" title="Accueil">Accueil</a></li>
                     <li class="primary-title primary-title-menu"><a href="#" title="Qui sommes-nous ?">Qui sommes-nous ?</a></li>
-                    <li class="primary-title primary-title-menu"><a href="#" title="Nos partenaires">Nos partenaires</a></li>
+                    <li class="primary-title primary-title-menu"><a href="{{ path('organisms_index') }}" title="Nos partenaires">Nos partenaires</a></li>
                     <li class="primary-title primary-title-menu"><a href="{{ path('add_message') }}" title="Nous contacter">Contact</a></li>
-                    <li class="primary-title primary-title-menu"><a href="#" title="Estime ton mobile">Estime ton mobile</a></li>
+                    <li class="primary-title primary-title-menu"><a href="{{ path('new_estimation') }}" title="Estime ton mobile">Estime ton mobile</a></li>
                 </ul>
             </nav>
             <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
