--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Liste des bons de cession stockés{% endblock %}
 
