--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -69,36 +69,40 @@
     }
 
     .estimations{
-        display: flex;
-        justify-content: center;
-        align-items: center;
         width: 100%;
         height: 70px;
         border-radius: 5px;
         box-shadow: inset 2px 0 10px rgb(223,216,222);
+        background-color: $secondary-color;
 
-        a{
-            display : block;
+         a{
+             display: flex;
+             justify-content: center;
+             align-items: center;
+            width: 100%;
+            height: 70px;
             text-decoration: none;
-            color: $secondary-color;
+             color: $white;
             font-weight: bold;
+             }
         }
     }
 
-    .collecters{
+    .collecters {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
         height: 70px;
-        position:relative;
+        position: relative;
         border-radius: 5px;
-        box-shadow: inset 2px 0 10px rgb(223,216,222);
+        box-shadow: inset 2px 0 10px rgb(223, 216, 222);
+        background-color: $secondary-color;
 
-        a{
-            display : block;
+        a {
+            display: block;
             text-decoration: none;
-            color: $secondary-color;
+            color: white;
             font-weight: bold;
         }
 
@@ -154,16 +158,13 @@
         height: 70px;
         border-radius: 5px;
         box-shadow: inset 2px 0 10px rgb(223,216,222);
+        background-color: $secondary-color;
 
-        a{
-            display : block;
+        a {
+            display: block;
             text-decoration: none;
-            color: $secondary-color;
+            color: white;
             font-weight: bold;
-        }
-
-        p{
-            margin-left: 5px;
         }
 
         .officialDocumentsBc{
@@ -174,7 +175,7 @@
             bottom: -72%;
             border-radius: 5px;
             box-shadow: inset 2px 0 10px rgb(223,216,222);
-            color: $secondary-color;
+            color: white;
         }
 
         .officialDocumentsBc.displayed{
@@ -185,6 +186,8 @@
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
             font-size: 1.3rem;
+            text-align: center;
+            padding: 10px;
         }
 
         .officialDocumentsCi{
@@ -206,9 +209,11 @@
             box-shadow: inset 2px 0 10px rgb(223,216,222);
             color: $secondary-color;
             font-size: 1.3rem;
+            text-align: center;
+            padding: 10px;
         }
     }
-}
+
 
 // Card centrale
 .card-central-admin{
