homeAdmin with path

--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Estimations index{% endblock %}
 
 {% block body %}
-    <h1>Estimations index</h1>
+    <h1 class="primary-title">Estimations</h1>
 
     <table class="table">
         <thead>
