--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,24 +1,20 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Administration {% endblock %}</title>
+{% extends 'base.html.twig' %}
+{% block title %}Administration {% endblock %}
     {% block stylesheets %}
         {{ encore_entry_link_tags('admin') }}
     {% endblock %}
-</head>
-{% block body %}
+{% block header %}
 <header>
     <div class="card-id">
         <article>
             <p>Identifiant</p>
             <p>Role</p>
         </article>
-        <h1>Bienvenue sur l'interface d'administration</h1>
+        <h1 class="titleAdmin">Bienvenue sur l'interface d'administration</h1>
     </div>
 </header>
-    <div class="form-group">
+
+<div class="form-group">
         <label for="search-user"></label><input class="form-control" type="text" id="search-user" value="" placeholder="Rechercher"/>
     </div>
 
@@ -41,15 +37,14 @@
             </li>
         </ul>
     </div>
-    <div class="card-central-admin">
+    <div class="card-central-admin">{% block bodyAdmin %} {% endblock %}</div>
+</main>
+{% endblock %}
+{% block body %}{% endblock %}
 
-    </div>
-    {% endblock %}
+{% block footer %}{% endblock %}
 
 {%  block javascripts %}
     {{ encore_entry_script_tags('admin') }}
-
 {% endblock %}
-</main>
-</html>
 
