--- a/templates/bdc/signature.html.twig
+++ b/templates/bdc/signature.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block header %}{% endblock %}
 {% block title %}Ajout de la signature{% endblock %}
 
 {% block body %}
@@ -8,12 +8,13 @@
                         <div class="col-12 mx-auto text-center form p-4">
                             <h1 class = primary-title>Ajout de la signature</h1>
                             <p>Signer ici</p>
-                            <canvas id="canvas" class="border border-primary"></canvas>
-                            (<span id="bt-clear">recommencer</span>)
+                            <canvas id="canvas" class="border border-success border-5"></canvas>
+                            <p>(<span id="bt-clear">recommencer</span>)</p>
                         </div>
                 </div>
        </div>
 {% endblock %}
+{% block footer %}{% endblock %}
 {%  block javascripts %}
 {{ encore_entry_script_tags('signature') }}
 {% endblock %}
