Add signature and redirect to PDF generation

--- a/templates/bdc/signature.html.twig
+++ b/templates/bdc/signature.html.twig
@@ -10,6 +10,7 @@
                             <p>Signer ici</p>
                             <canvas id="canvas" class="border border-success border-5"></canvas>
                             <p>(<span id="bt-clear">recommencer</span>)</p>
+                            <a href="{{ path('bdc_pdf', { 'id': estimation.id}) }}" title="Envoyer la signature" class="primary-button">Valider la signature</a>
                         </div>
                 </div>
        </div>
