add infobulle on acceuil for indicate user

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -67,6 +67,11 @@ a{
     margin : 30px auto;
 }
 
+.bulle_info {
+    height: 50px;
+    width: 50px;
+}
+
 /* HEADER NAV */
 header{
     .logo-bipbip{
