--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,6 +33,8 @@
                 <div id="links-apps">
                     <img src="/images/apple-store-mini.png" class="link-app">
                     <img src="/images/google-play-mini.png" class="link-app">
+                    <img src="/images/pic_info.png" class="link-app" title="L'estimation en ligne apporte une valeur inférieur à celle de l'appli Bip-Bip">
+
                 </div>
                 <p>Si ton tèl est cassé, <a href="{{ path("new_estimation") }}" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
             </article>
