Ajout du lien vers l'ajout d'un collecteur

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -29,7 +29,7 @@
             <li class="collecters">
                 <a href="#">Collecteurs</a>
                     <button type="button" class="collecterActionsLister">Lister</button>
-                    <button type="button" class="collecterActionsAdd">Ajouter</button>
+                    <a href="{{ path('adminregister_collector') }}" class="collecterActionsAdd">Ajouter</a>
             </li>
             <li class="officialDocuments">
                 <a href="#">Documents stockés</a>
