--- a/templates/admin/register_collector.html.twig
+++ b/templates/admin/register_collector.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Inscris toi !{% endblock %}
 
@@ -6,6 +6,8 @@
     <h1>Ajout d'un collecteur</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.organism, { 'label': 'Organisme Collecteur associé' }) }}
+        <a href="{{ path('organisms_new') }}" class="fourth-button">Ajouter un organisme collecteur</a>
         {{ form_row(registrationForm.gender, { 'label': 'Genre' }) }}
         {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
         {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
@@ -13,7 +15,6 @@
         {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
         {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
         {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone' }) }}
-        {{ form_row(registrationForm.organism, { 'label': 'Organisme Collecteur associé' }) }}
         {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
         {{ form_row(registrationForm.plainPassword, { 'label': 'Mot de passe' }) }}
         {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
