Changement du block title de la page

--- a/templates/admin/register_collector.html.twig
+++ b/templates/admin/register_collector.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Inscris toi !{% endblock %}
+{% block title %}Nouveau collecteur{% endblock %}
 
 {% block body %}
     <h1>Ajout d'un collecteur</h1>
