--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,12 +3,21 @@
 {% block title %}Inscris toi !{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
+    <h1 class="primary-title">Inscription</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        <p>Afin d'accéder aux points de collecte te concernant, appartiens-tu à un des organismes de la liste ci-dessous ?</p>
+        {{ form_row(registrationForm.organism, { 'label': 'Organismes partenaires de Bip Bip Mobile ?' }) }}
+        {{ form_row(registrationForm.gender, { 'label': 'Genre' }) }}
+        {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
+        {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
+        {{ form_row(registrationForm.address, { 'label': 'Adresse' }) }}
+        {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
+        {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
+        {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone' }) }}
+        {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
+        {{ form_row(registrationForm.plainPassword, { 'label': 'Mot de passe' }) }}
+        {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
 
         <button class="fourth-button">S'inscrire</button>
     {{ form_end(registrationForm) }}
