--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -56,7 +56,7 @@ a{
     font-size : 1rem;
     font-weight: 500;
     color : $fourth-color;
-    text-align : center;
+    text-align : left;
     border-bottom : 1px $fourth-color solid;
     padding : 1%;
     width : 70%;
@@ -101,21 +101,20 @@ header{
         }
 
         ul{
+            margin : 50px auto;
+
             .primary-title-menu{
                 max-width : 300px;
-                margin : 20px auto;
-                min-height : 45px;
+                margin : 15px auto;
+                min-height : 35px;
                 max-height : 50px;
                 display : flex;
-                justify-content: center;
+                justify-content: left;
                 align-items : center;
 
-                &:after{
-                    display:none;
-                }
-
                 a{
-                    color : $secondary-color;
+                    color : $fourth-color;
+                    text-align: left;
                 }
             }
         }
@@ -212,7 +211,7 @@ footer {
 /* MEDIA QUERIES */
 @media screen and (min-width: 740px) {
     .primary-title{
-        font-size : 1.4rem;
+        font-size : 1.1rem;
     }
 
     header {
