Ajout d'une div dans le lien FAQ pour que le lien se fasse sur toute la div. Réglage de la taille de la bulle FAQ.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,9 +28,13 @@
                     <img src="/images/menu-burger.png" alt="menu burger" />
                     <p>Menu</p>
                 </div>
-                <div id="faq-button">
-                    <a href="{{ path('show_faq') }}">FAQ</a>
-                </div>
+
+                <a href="{{ path('show_faq') }}">
+                    <div id="faq-button">
+                        <p>FAQ</p>
+                    </div>
+                </a>
+
             </div>
         </header>
         {% endblock %}
