--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -164,15 +164,17 @@ header{
             border-radius : 50%;
             width : 8vw;
             min-width : 70px;
+            max-width : 75px;
             height : 8vw;
             min-height: 70px;
+            max-height: 75px;
             background-color : black;
             position : fixed;
             left : 5vw;
             bottom : 5vh;
             z-index : 5;
 
-            a{
+            p{
                 color : white;
                 font-size : 1rem;
                 margin-bottom : 0;
