--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,8 @@
 
         {% for message in app.flashes('success') %}
             <div class="alert alert-success text-center">
-                {{ message }}
+                <p>{{ message }}</p>
+                <a href="">Choisis ton point de collecte</a>
             </div>
         {% endfor %}
 
