--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -24,14 +24,14 @@
 
                 <p>{{ organism.organismPostcode }}</p>
 
-                <p>{{ organism.organismPhone }}</p>
+                <p>0{{ organism.organismPhone }}</p>
             </div>
 
 
         </div>
 
 
-        <p><a class="linkA" href="{{ organism.organismLink }}">Visiter le site</a></p>
+        <p><a class="linkA"  target="_blank" href="{{ organism.organismLink }}">Visiter le site</a></p>
 
         <div id="clickLink">
 
