Ajout des liens pour l'application pumpkin pour playstore et applestore. Mise en forme des images en conséquence.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,10 +29,10 @@
                     </div>
                     <p>Découvre la valeur de ton tèl</p>
                 </div>
-                <a href="#" title="Lien vers l'application d'estimation" class="third-button">Télécharge l'appli Bipbip</a>
+                <p class="third-button">Télécharge l'appli Bipbip</p>
                 <div id="links-apps">
-                    <img src="/images/apple-store-mini.png" class="link-app">
-                    <img src="/images/google-play-mini.png" class="link-app">
+                    <a href="#"><img src="/images/apple-store-mini.png" class="link-app"></a>
+                    <a href="#"><img src="/images/google-play-mini.png" class="link-app"></a>
                 </div>
                 <p>Si ton tèl est cassé, <a href="{{ path("new_estimation") }}" title="Lien vers l'estimation en ligne">fais une estimation en ligne</a></p>
             </article>
@@ -66,7 +66,11 @@
                     </div>
                     <p>Reçois ton argent instantanément</p>
                 </div>
-                <a href="#" title="Lien vers l'application d'estimation" class="secondary-button">Télécharge l'appli Pumpkin</a>
+                <p class="secondary-button">Télécharge l'appli Pumpkin</p>
+                <div id="links-apps">
+                    <a target=_blank href="https://apps.apple.com/fr/app/pumpkin-remboursement-facile/id904976887"><img src="/images/apple-store-mini.png" class="link-app"></a>
+                    <a target=_blank href="https://play.google.com/store/apps/details?id=com.pumpkin.pumpkin&hl=fr"><img src="/images/google-play-mini.png" class="link-app"></a>
+                </div>
             </article>
         </section>
 
