--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -34,10 +34,10 @@
         <p><a class="linkA" href="{{ organism.organismLink }}">Visiter le site</a></p>
 
         <div id="clickLink">
-
-        <a href="{{ path('organisms_index') }}">Retour à la liste</a>
-        <br>
-        <a href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
+            <a class="btn btn-primary" href="{{ path('addCollect', {'id': organism.id}) }}">Organiser une collecte</a>
+            <a href="{{ path('organisms_index') }}">Retour à la liste</a>
+            <br>
+            <a href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
 {#
     {{ include('organisms/_delete_form.html.twig') }}
 #}
