--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,8 +81,9 @@
             </div>
         </footer>
         {% endblock %}
-
-        {{ encore_entry_script_tags('app') }}
+        {% block JsApp %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
