--- a/assets/scss/bdc.scss
+++ b/assets/scss/bdc.scss
@@ -1,20 +1,14 @@
-#bdc {
-
-    .logo-left {
-        width: 180px;
-    }
-
-    h1 {
-        font-size: 2rem;
-        text-align: center;
-        padding-top: 30px;
-        text-transform: uppercase;
-    }
-
-    h2 {
-        font-size: 1rem;
-        text-align: center;
-        text-transform: uppercase;
-    }
-
+@font-face {
+    font-family: 'Code 128';
+    src: url('public/fonts/Code128.woff2') format('woff2'),
+    url('public/fonts/Code128.woff') format('woff'),
+    url('public/fonts/Code128.svg#Code128') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+.barcode {
+    font-family: 'Code 128', serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
 }
