Ajout de la balise a pour les images des partenaires. Affichage dynamique à faire par la suite quand création fonction random

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -227,11 +227,16 @@
                 margin : auto;
             }
 
-            img {
-                width : 25%;
-                margin : 5%;
-                @media screen and (min-width: 740px) {
-                    width : 15%;
+            a {
+                display : block;
+                width : 15%;
+                margin: 5%;
+
+                img {
+                    width: 100%;
+                    @media screen and (min-width: 740px) {
+                        width: 100%;
+                    }
                 }
             }
         }
