--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,9 +84,9 @@
             <h2 class="primary-title">Ils nous font confiance</h2>
             <h3>+ de 15 partenaires nous font confiance</h3>
             <article>
-                <img src="/images/ilevia-logo.png" alt=""/>
-                <img src="/images/jules-logo.png" alt=""/>
-                <img src="/images/yuka-logo.png" alt=""/>
+                <a><img src="/images/ilevia-logo.png" alt=""/></a>
+                <a><img src="/images/jules-logo.png" alt=""/></a>
+                <a><img src="/images/yuka-logo.png" alt=""/></a>
             </article>
             <a href="{{ path('organisms_index') }}" title="Lien vers la page partenaire" class="primary-button">Rejoindre nos partenaires</a>
         </section>
