--- a/assets/scss/bdc.scss
+++ b/assets/scss/bdc.scss
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'Code 128';
-    src: url('public/fonts/Code128.woff2') format('woff2'),
-    url('public/fonts/Code128.woff') format('woff'),
-    url('public/fonts/Code128.svg#Code128') format('svg');
+    src: url('/fonts/Code128.woff2') format('woff2'),
+    url('/fonts/Code128.woff') format('woff'),
+    url('/fonts/Code128.svg#Code128') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -10,5 +10,5 @@
     font-family: 'Code 128', serif;
     font-weight: normal;
     font-style: normal;
-    font-size: 20px;
+    font-size: 40px;
 }
