Fix bug about getFirstName in BDCController

--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -57,7 +57,7 @@
                 Oui
             </div>
         </div>
-
+    <p></p>
         <div class="row">
             <div class="col-3 font-weight-bold">
                 Diagnostic :
@@ -99,7 +99,7 @@
                 {%  endif %}
             </div>
         </div>
-
+    <p></p>
         <div class="row">
             <div class="col-2 font-weight-bold">
                 Nom :<br>
@@ -126,13 +126,11 @@
                 France
             </div>
         </div>
-
-<p>* J'atteste sur l'honneur être le propriétaire légitime de ce produit et d'avoir le droit
-    de transmettre la propriété de celui-ci (je suis majeur et apte jurdiquement).<br>
-    * Je déclare avoir pris connaissance des conditions générales d'achat et de vente d'ENVIRO SERVICES FRANCE.<br>
-    * Je confirme que le téléphone n'a pas été rooté, et n'est pas bloqué (mot de passe, empreinte digitale...).</p>
-
-
+    <p></p>
+    <p>* J'atteste sur l'honneur être le propriétaire légitime de ce produit et d'avoir le droit
+        de transmettre la propriété de celui-ci (je suis majeur et apte jurdiquement).<br>
+        * Je déclare avoir pris connaissance des conditions générales d'achat et de vente d'ENVIRO SERVICES FRANCE.<br>
+        * Je confirme que le téléphone n'a pas été rooté, et n'est pas bloqué (mot de passe, empreinte digitale...).</p>
         <div class="row">
             <div class="col-2 font-weight-bold">
                 Lieu de collecte :<br>
@@ -153,7 +151,7 @@
                 <img width="100px; margin-top:30px;" src="/images/cachet.png" alt="BipBip Mobile">
             </div>
             <div class="col-6">
-
+                <p>lu et approuvé</p>
             </div>
         </div>
     <div class="row">
