Fix scss for bdc/show and delete a dd

--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'admin/index.html.twig' %}
 {% block title %}PDF estimation{% endblock %}
 {% block stylesheets %}
+    {{ parent() }}
     {{ encore_entry_link_tags('bdc') }}
 {% endblock %}
 {%  block body %}
