Modif format date on page collect

--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -11,8 +11,8 @@
     {% for collect in collects %}
     <tbody>
         <td><h5>{{ collect.collector.organismName }}</h5></td>
-        <td>{{ collect.collector.organismAddress }}</td>
-        <td>{{ collect.dateCollect.date|date('d-m-Y H:i') }}</td>
+        <td>{{ collect.collector.organismAddress }}, {{ collect.collector.organismPostcode }} {{ collect.collector.organismCity }}</td>
+        <td>{{ collect.dateCollect.date|date('d-M-Y H:i') }}</td>
         <td><a class="btn btn-primary"  href="">Participer</a></td>
     </tbody>
     {% endfor %}
