--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -35,9 +35,9 @@
 
         <div id="clickLink">
 
-        <a href="{{ path('organisms_index') }}">Retour à la liste</a>
+        <a class="fourth-button" href="{{ path('organisms_index') }}">Retour à la liste</a>
         <br>
-        <a href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
+        <a class="fourth-button" href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
 {#
     {{ include('organisms/_delete_form.html.twig') }}
 #}
