--- a/assets/scss/partnerList.scss
+++ b/assets/scss/partnerList.scss
@@ -7,6 +7,7 @@
         flex-wrap: wrap;
 
         article {
+            display: block;
             margin: 10px;
             @media screen and (min-width: 740px){
                 display: flex;
@@ -36,6 +37,7 @@
     }
 
     .aLink{
+        font-size: 2em;
         display: block;
         text-decoration: underline;
         text-align: center;
