--- a/templates/organisms/_form.html.twig
+++ b/templates/organisms/_form.html.twig
@@ -17,7 +17,8 @@
             {{ form_widget(form.organismPostcode, {'attr': {'class': 'form-control mt-3 mb-3', 'placeholder': 'Code postal', 'label': 'Code postal', 'required': true}}) }}
             {{ form_widget(form.organismPhone, {'attr': {'class': 'form-control mt-3 mb-3', 'placeholder': 'Téléphone', 'label': 'Téléphone', 'required': true}}) }}
             {{ form_widget(form.organismStatus, {'attr': {'class': 'form-control mt-3 mb-3', 'placeholder': 'Statut', 'label': 'Statut', 'required': true}}) }}
-            {{ form_row(form.createNew, {'label': 'Sauvegarder', 'class': 'btn btn-validButton'}) }}
+
+            <button class="secondary-button">Ajouter</button>
         </div></div></div>
 {{ form_end(form) }}
 {% endblock %}
