--- a/templates/organisms/new.html.twig
+++ b/templates/organisms/new.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}New Organisms{% endblock %}
 
 {% block stylesheets %}
+    {{ encore_entry_link_tags('admin') }}
     {{ encore_entry_link_tags('newPartner') }}
 {% endblock %}
 
@@ -11,5 +12,5 @@
 
     {{ include('organisms/_form.html.twig') }}
 
-    <a id="newLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
+    <a class="secondary-button" id="newLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
 {% endblock %}
