--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -1,55 +1,39 @@
 {% extends 'admin/index.html.twig' %}
 
 {% block title %}Estimations index{% endblock %}
-
+ {% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('estimationAdmin') }}
+ {% endblock %}
 {% block body %}
     <h1 class="primary-title">Estimations</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>EstimationDate</th>
-                <th>IsCollected</th>
-                <th>Model</th>
-                <th>Capacity</th>
-                <th>Brand</th>
-                <th>Color</th>
-                <th>LiquidDamage</th>
-                <th>ScreenCracks</th>
-                <th>CasingCracks</th>
-                <th>BatteryCracks</th>
-                <th>ButtonCracks</th>
-                <th>MaxPrice</th>
-                <th>EstimatedPrice</th>
-                <th>IsValidatedPayment</th>
-                <th>IsValidatedSignature</th>
-                <th>actions</th>
+                <th>Nom Prénom</th>
+                <th>Plus d'infos</th>
+                <th>Edition</th>
+                <th>Collecter</th>
+
             </tr>
         </thead>
         <tbody>
         {% for estimation in estimations %}
             <tr>
-                <td>{{ estimation.id }}</td>
-                <td>{{ estimation.estimationDate ? estimation.estimationDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ estimation.isCollected ? 'Yes' : 'No' }}</td>
-                <td>{{ estimation.model }}</td>
-                <td>{{ estimation.capacity }}</td>
-                <td>{{ estimation.brand }}</td>
-                <td>{{ estimation.color }}</td>
-                <td>{{ estimation.liquidDamage }}</td>
-                <td>{{ estimation.screenCracks }}</td>
-                <td>{{ estimation.casingCracks }}</td>
-                <td>{{ estimation.batteryCracks }}</td>
-                <td>{{ estimation.buttonCracks }}</td>
-                <td>{{ estimation.maxPrice }}</td>
-                <td>{{ estimation.estimatedPrice }}</td>
-                <td>{{ estimation.isValidatedPayment ? 'Yes' : 'No' }}</td>
-                <td>{{ estimation.isValidatedSignature ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('estimations_show', {'id': estimation.id}) }}">show</a>
-                    <a href="{{ path('estimations_edit', {'id': estimation.id}) }}">edit</a>
+                <td class="infoUser">
+                    {% if estimation.user is not null%}
+                        {{ estimation.user.lastname }}
+                        {{ estimation.user.firstname }}
                 </td>
+                    {% endif %}
+
+                <td class="fourth-button info">
+                    <a href="{{ path('estimations_show', {'id': estimation.id}) }}">Plus d'infos</a></td>
+                 <td class="fourth-button editEstim">
+                     <a href="{{ path('estimations_edit', {'id': estimation.id}) }}">Edition</a></td>
+                <td class="fourth-button buttonsCollecters">
+                    <a href="#">Collecter</a></td>
             </tr>
         {% else %}
             <tr>
