--- a/templates/organisms/edit.html.twig
+++ b/templates/organisms/edit.html.twig
@@ -12,7 +12,7 @@
 
     {{ include('organisms/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a class="secondary-button" class="editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
+    <a class="secondary-button editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
 
     {{ include('organisms/_delete_form.html.twig') }}
 {% endblock %}
