--- a/templates/organisms/index.html.twig
+++ b/templates/organisms/index.html.twig
@@ -38,7 +38,7 @@
 
 
 
-        <br><a class="fourth-button" class="aLink" href="{{ path('organisms_new') }}">Ajouter</a>
+        <br><a class="fourth-button aLink" href="{{ path('organisms_new') }}">Ajouter</a>
 
 
     </main>
