--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -30,14 +30,13 @@
 
         </div>
 
-
-        <p><a class="linkA"  target="_blank" href="{{ organism.organismLink }}">Visiter le site</a></p>
-
         <div id="clickLink">
 
-        <a class="fourth-button" href="{{ path('organisms_index') }}">Retour à la liste</a>
+            <a class="linkA"  target="_blank" href="{{ organism.organismLink }}">Visiter le site</a>
+
+            <a class="fourth-button" href="{{ path('organisms_index') }}">Retour à la liste</a>
         <br>
-        <a class="fourth-button" href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
+           <a class="fourth-button" href="{{ path('organisms_edit', {'id': organism.id}) }}">Modifier</a>
 {#
     {{ include('organisms/_delete_form.html.twig') }}
 #}
