--- a/assets/scss/editPartner.scss
+++ b/assets/scss/editPartner.scss
@@ -7,7 +7,10 @@
 
 .editLink{
     display: block;
-    text-align: left;
-    margin-left: 13px;
+    text-align: center;
+    margin-left: 20%;
+    @media screen and (min-width: 740px){
+        margin-left: 42%;
+    }
 }
 
