--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -26,10 +26,10 @@
                 <a href="{{ path ('estimations_index') }}">Estimations
                 </a>
             </li>
-            <li class="collecters">
-                <a href="#">Collecteurs</a>
-                    <button type="button" class="collecterActionsLister">Lister</button>
-                    <a href="{{ path('adminregister_collector') }}" class="collecterActionsAdd">Ajouter</a>
+            <li class="organisms">
+                <a href="#">Organismes</a>
+                    <button type="button" class="organismActionsLister">Lister</button>
+                    <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter</a>
             </li>
             <li class="officialDocuments">
                 <a href="#">Documents stockés</a>
