--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -28,7 +28,7 @@
             </li>
             <li class="organisms">
                 <a href="#">Organismes</a>
-                    <button type="button" class="organismActionsLister">Lister</button>
+                    <a href="#" class="organismsActionsLister">Lister</a>
                     <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter</a>
             </li>
             <li class="officialDocuments">
