--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -34,7 +34,7 @@
             <li class="officialDocuments">
                 <a href="#">Documents stockés</a>
                 <a class="officialDocumentsBc" href="{{ path ('bdc_index') }}">Bons de cessions</a>
-                <a class="officialDocumentsCi" href="{{ path ('bdc_index') }}">Cartes d'identitées</a>
+                <a class="officialDocumentsCi" href="#">Cartes d'identitées</a>
             </li>
         </ul>
     </div>
