--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -107,7 +107,7 @@
         font-weight: bold;
         }
 
-    .organismActionsLister{
+    .organismsActionsLister{
         display : none;
         position: absolute;
         bottom : -72%;
@@ -118,7 +118,7 @@
         color: $secondary-color;
         }
 
-    .organismActionsLister.displayed{
+    .organismsActionsLister.displayed{
         display: block;
         width: 100%;
         height: 50px;
@@ -130,7 +130,7 @@
         padding: 10px;
         }
 
-    .organismActionsAdd{
+    .organismsActionsAdd{
         display : none;
         position: absolute;
         bottom: -143%;
@@ -141,7 +141,7 @@
         color: $secondary-color;
         }
 
-    .organismActionsAdd.displayed{
+    .organismsActionsAdd.displayed{
         display: block;
         width: 100%;
         height: 50px;
