--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -28,13 +28,16 @@
             </li>
             <li class="organisms">
                 <a href="#">Organismes</a>
-                    <a href="#" class="organismsActionsLister">Lister</a>
-                    <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter</a>
+                    <a href="#" class="organismsLister">Listes des partenaires</a>
+                    <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter un organisme</a>
+                    <a href="#" class="organismsListerCollector">Listes des collecteurs</a>
+                    <a href="#" class="organismsAddCollector">Ajouter un collecteur</a>
+
             </li>
             <li class="officialDocuments">
                 <a href="#">Documents stockés</a>
-                <a class="officialDocumentsBc" href="{{ path ('bdc_index') }}">Bons de cessions</a>
-                <a class="officialDocumentsCi" href="#">Cartes d'identitées</a>
+                <a href="{{ path ('bdc_index') }}" class="officialDocumentsBc">Bons de cessions</a>
+                <a href="#" class="officialDocumentsCi">Cartes d'identitées</a>
             </li>
         </ul>
     </div>
