--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -41,7 +41,8 @@
             </li>
         </ul>
     </div>
-    <div class="card-central-admin">{% block bodyAdmin %} {% endblock %}</div>
+    <div class="card-central-admin">
+        {% block bodyAdmin %} {% endblock %}</div>
 </main>
 {% endblock %}
 {% block body %}{% endblock %}
