Changement de phrase quand l'utilisateur est déjà connecté

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,8 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                <p>Tu es connecté(e) en tant que {{ app.user.email }}</p>
+                <a href="{{ path('app_logout') }}" class="disconnection">Logout</a>
             </div>
         {% else %}
             <div class="container-fluid">
