homeAdmin with pathand new category

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -28,10 +28,10 @@
             </li>
             <li class="organisms">
                 <a href="#">Organismes</a>
-                    <a href="#" class="organismsLister">Listes des partenaires</a>
+                    <a href="{{ path('organisms_index') }}" class="organismsLister">Listes des partenaires</a>
                     <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter un organisme</a>
-                    <a href="#" class="organismsListerCollector">Listes des collecteurs</a>
-                    <a href="#" class="organismsAddCollector">Ajouter un collecteur</a>
+                    <a href="{{ path('collects_index') }}" class="organismsListerCollector">Listes des collecteurs</a>
+                    <a href="{{ path('collects_new') }}" class="organismsAddCollector">Ajouter un collecteur</a>
 
             </li>
             <li class="officialDocuments">
