mise en forme de la vue bdc

--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -1,10 +1,13 @@
 {% extends 'admin/index.html.twig' %}
 
 {% block title %}Liste des bons de cession stockés{% endblock %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('bdcVueAdmin') }}
+{% endblock %}
 {% block body %}
     <h1 class="primary-title">Liste des bons de cession stockés</h1>
-    <ul>
+    <ul class="bdcCard">
     {% for file in files %}
         <li><a href="../uploads/BDC/{{ file }}">{{ file }}</a></li>
     {% endfor %}
