Suppresion de certaines parties du footer, aucune données pour l'instant sur ces parties

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,12 +66,9 @@
             <h2 class="primary-title">Plus d'infos</h2>
             <ul>
                 <li><a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">Qui sommes-nous ?</a></li>
-                <li><a href="#" title="Revendre ton tèl">Revendre ton tèl</a></li>
-                <li><a href="#" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
-                <li><a href="#" title="Collectes et évènements">Collectes et évènements</a></li>
+                <li><a href="{{ path('new_estimation') }}" title="Revendre ton tèl">Revendre ton tèl</a></li>
+                <li><a href="{{ path('add_message') }}" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
                 <li><a href="{{ path('show_faq') }}" title="FAQ">Besoin d'aide ?</a></li>
-                <li><a href="#" title="Paiement">Paiement</a></li>
-                <li><a href="#" title="Livraison">Livraison</a></li>
                 <li>Ce que l'on oublie de lire (
                     <a href="{{ path('cgu') }}" title="Conditions Générales de Vente">CGV</a>
                      -
