Configure a 404 error page and other errors by using template/TwigBundle

--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <main id="404">
+    <main id="error">
         <div class="container">
             <h1 class="primary-title">Oups, une erreur !</h1>
             <div class="row justify-content-center">
