--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -73,13 +73,13 @@
                 </div>
             </article>
         </section>
-
+{#
         <section class="bail-bipbip">
             <h2 class="primary-title">Le bon bail Bipbip</h2>
             <a href="#">Teste un bipbip mobile</a>
             <a href="#">Les bons plans de ta région</a>
         </section>
-
+#}
         <section class="home-partner">
             <h2 class="primary-title">Ils nous font confiance</h2>
             <h3>+ de 15 partenaires nous font confiance</h3>
@@ -98,7 +98,7 @@
             )) }}
             {{ include('contact/_form.html.twig') }}#}
 
-            <a href="{{ path('add_message') }}" title="Lien vers la page contact">Contacte nous</a>
+            <a href="{{ path('add_message') }}" title="Lien vers la page contact" class="fourth-button">Contacte nous</a>
         </section>
     </main>
 {% endblock %}
