--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -19,7 +19,7 @@
 </table>
     <script type="text/javascript">
         function ConfirmCollect() {
-            if (confirm("Etes vous sure de vouloir participer à cette collecte ?")) {
+            if (confirm("Es-tu sûr de vouloir participer à cette collecte ?")) {
 
             }
         }
