Ajout de propriétés générales pour le main afin qu'il fasse une taille minimale et que les éléments soient centrés dans celui-ci

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -46,6 +46,17 @@ body{
     font-size : 1rem;
 }
 
+main{
+    min-height : 70vh;
+    display : flex;
+    justify-content : center;
+    align-items: center;
+    padding : 0 20px;
+    @media screen and (min-width: 740px){
+        min-height : 65vh;
+    }
+}
+
 a{
     color : black;
     cursor : pointer;
