--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -5,4 +5,19 @@
         margin-bottom : 20px;
         font-family: "co-headline", sans-serif;
     }
+
+    .fourth-button{
+        width : 140px;
+        @media screen and (min-width: 740px) {
+            margin: 30px auto;
+        }
+    }
+
+    .registration, p{
+        display : block;
+        font-size : 1rem;
+        text-align: center;
+        margin : 10px auto;
+        color : $primary-color;
+    }
 }
