--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                Tu es connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
             </div>
         {% else %}
             <div class="container-fluid">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="row  justify-content-center">
                     <div class="col-8 col-sm-6 col-lg-3">
-                        <label for="inputPassword">Password</label>
+                        <label for="inputPassword">Mot de passe</label>
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
                 </div>
@@ -51,9 +51,13 @@
             #}
 
             <button class="fourth-button" type="submit">
-                Sign in
+                Connecte-toi
             </button>
-        {% endif %}
-    </form>
+
+        </form>
+
+        <p>Pas encore de compte ?</p>
+        <a href="{{ path('app_register') }}" class="registration">Crées-en un !</a>
+    {% endif %}
 </main>
 {% endblock %}
