serachbar test with Ajax

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,7 +16,7 @@
 </header>
 
 <div class="form-group">
-    <label for="searchUser"></label><input class="form-control" type="text" id="search-user" value="" placeholder="Rechercher"/>
+    <label for="searchUser"></label><input class="form-control" type="text" id="searchUser" value="" placeholder="Rechercher"/>
 </div>
 
 <div style="margin-top: 20px"></div>
