--- a/templates/admin/register_collector.html.twig
+++ b/templates/admin/register_collector.html.twig
@@ -6,7 +6,7 @@
     <h1>Ajout d'un collecteur</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.organism, { 'label': 'Organisme Collecteur associé' }) }}
+        {{ form_row(registrationCollectorForm.organism, { 'label': 'Organisme Collecteur associé' }) }}
         <a href="{{ path('organisms_new') }}" class="fourth-button">Ajouter un organisme collecteur</a>
         {{ form_row(registrationForm.gender, { 'label': 'Genre' }) }}
         {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
