--- a/templates/estimation/autres.html.twig
+++ b/templates/estimation/autres.html.twig
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-10 mx-auto text-center form p-4">
                 <h1 class="primary-title">Estime ton tel</h1>
-                <p class="alert alert-danger">Désolé, ton téléphone n'est pas repris par Bip Bip Mobile, reviens plus tard, nous aurons une liste qui pourrais t'intéresser.</p>
+                <p class="alert alert-danger">Désolé, ton téléphone n'est pas repris par Bip Bip Mobile, reviens plus tard, nous aurons une liste qui pourrait t'intéresser.</p>
                 <a class="btn btn-success" href="{{ path('home') }}">Retour à l'acceuil</a>
             </div>
         </div>
