--- a/templates/estimation/capacity.html.twig
+++ b/templates/estimation/capacity.html.twig
@@ -11,5 +11,10 @@
                 {% endfor %}
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 mx-auto text-center form p-4">
+                <a class="btn btn-primary" href="{{ path("autres") }}">Autre...</a>
+            </div>
+        </div>
     </div>
 {% endblock %}
