--- a/templates/estimation/model.html.twig
+++ b/templates/estimation/model.html.twig
@@ -11,9 +11,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-5 text-center"></div>
-            <div class="col-4">
-                <a class="btn btn-primary" href="{{ path("autres") }}">Autres...</a>
+            <div class="col-12 mx-auto text-center form p-4">
+                <a class="btn btn-primary" href="{{ path("autres") }}">Autre...</a>
             </div>
         </div>
     </div>
