--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -1,9 +1,12 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('final_estimation') }}
+{% endblock %}
 {% block body %}
-
-    <div class="container jumbotron">
+<main id="final_estimation">
+    <div class="container jumbotron p-3">
         <div class="row">
-            <div class="col-12 mx-auto text-center form p-4">
+            <div class="col-12 text-center">
                 <h1 class="primary-title">Dernière étape</h1>
                 <h2 class="text-dark">{{ brand }}</h2>
                 <h3 class="text-dark">{{ model }}</h3>
@@ -13,7 +16,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row quest">
             <div class="col-12">
                 <h4>Votre téléphone a t-il été immergé dans l'eau ?</h4>
             </div>
@@ -24,8 +27,8 @@
         </div>
     </div>
 
-    <div class="container jumbotron">
-        <div class="row">
+    <div class="container">
+        <div class="row quest">
             <div class="col-12">
                 <h4>Votre écran est-il endommagé ?</h4>
             </div>
@@ -36,7 +39,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row quest">
             <div class="col-12">
                 <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
@@ -46,8 +49,8 @@
         </div>
     </div>
 
-    <div class="container jumbotron">
-        <div class="row">
+    <div class="container">
+        <div class="row quest">
             <div class="col-12">
                 <h4>Avez vous des problèmes de charge au niveau de votre batterie ?</h4>
             </div>
@@ -58,7 +61,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row quest">
             <div class="col-12">
                 <h4>Tous vos boutons sont-ils fonctionnels ?</h4>
             </div>
@@ -70,7 +73,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 text-center">
                 {{ form_row(form.submit, {'label': 'Valider', 'class': 'btn btn-primary'}) }}
                 {{ form_end(form) }}
             </div>
@@ -78,10 +81,9 @@
     </div>
 
     <div class="row">
-        <div class="col-5 text-center"></div>
-        <div class="col-4">
+        <div class="col-12 text-center">
             <a class="btn btn-info" href="{{ path("home") }}">Retour à l'accueil</a>
         </div>
     </div>
-
+</main>
 {% endblock %}
