--- a/templates/estimations/show.html.twig
+++ b/templates/estimations/show.html.twig
@@ -69,7 +69,7 @@
             </tr>
             <tr>
                 <th>IsValidatedSignature</th>
-                <td>{{ estimation.isValidatedSignature ? 'Yes' : 'No' }}</td>
+                <td>{{ estimation.isValidatedCi ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
     </table>
