--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -13,16 +13,12 @@
         <td><h5>{{ collect.collector.organismName }}</h5></td>
         <td>{{ collect.collector.organismAddress }}, {{ collect.collector.organismPostcode }} {{ collect.collector.organismCity }}</td>
         <td>{{ collect.dateCollect.date|date('d M Y H:i') }}</td>
-        <td><a href="{{ path('choice', {collect: collect.id }) }}" onclick="ConfirmCollect()">Participer</a></td>
+        <td><a class="btn btn-success choice_collect" href="{{ path('choice', {collect: collect.id }) }}" onclick="ConfirmCollect()">Participer</a></td>
     </tbody>
     {% endfor %}
 </table>
-    <script type="text/javascript">
-        function ConfirmCollect() {
-            if (confirm("Etes vous sure de vouloir participer à cette collecte ?")) {
 
-            }
-        }
-    </script>
-
+{% block javascripts %}
+    {{ encore_entry_script_tags('show_collect') }}
+{% endblock %}
 {% endblock %}
